<resources>
    <string name="app_name">My Application</string>
    <string name="app_nam">Result</string>
    <string name="BOTON_CHECK">VERIFICAR</string>
    <string name="BOTON_pantalla2">INTENTAR DE NUEVO </string>
    <string name="BOTON_Close">CERRAR</string>
    <string name="inf_pantalla2Right">FALLASTE!!!</string>
    <string name="textopant1">Qué día de la semana estamos?</string>
    <string name="inf_pantalla2Good">BIEN..</string>
    <string name="text1">bien</string>
    <string name="text2">mal</string>
    <string name="mal">mal</string>


</resources>